force-app/main/default/objects/GrillaHorario__c/GrillaHorario__c.object-meta.xml
<CustomObject>
    <label>Grilla Horario</label>
    <nameField>
        <displayFormat>GH# {00000000}</displayFormat>
        <label>Grilla detalle Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Grilla Horarios</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>