force-app/main/default/objects/GrillaHorario__c/fields/desde__c.field-meta.xml
<CustomField>
    <fullName>desde__c</fullName>
    <label>Desde</label>
    <required>true</required>
    <type>Time</type>
</CustomField>