force-app/main/default/objects/GrillaHorario__c/fields/dia__c.field-meta.xml
<CustomField>
    <fullName>dia__c</fullName>
    <label>Dia de la semana</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Lunes</fullName>
            </value>
            <value>
                <fullName>Martes</fullName>
            </value>
            <value>
                <fullName>Miercoles</fullName>
            </value>
            <value>
                <fullName>Jueves</fullName>
            </value>
            <value>
                <fullName>Viernes</fullName>
            </value>
            <value>
                <fullName>Sabado</fullName>
            </value>
            <value>
                <fullName>Domingo</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>