force-app/main/default/objects/GrillaHorario__c/fields/duracion__c.field-meta.xml
<CustomField>
    <fullName>duracion__c</fullName>
    <formula>hasta__c - desde__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>duracion</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>