force-app/main/default/objects/GrillaHorario__c/fields/Grilla__c.field-meta.xml
<CustomField>
    <fullName>Grilla__c</fullName>
    <label>Grilla</label>
    <referenceTo>Grilla__c</referenceTo>
    <relationshipLabel>Grilla Horarios</relationshipLabel>
    <relationshipName>GrillaHorarios</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>