force-app/main/default/objects/GrillaHorario__c/fields/hasta__c.field-meta.xml
<CustomField>
    <fullName>hasta__c</fullName>
    <label>Hasta</label>
    <required>true</required>
    <type>Time</type>
</CustomField>